# heart-disease-mlp

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPENDENCIES.md  Dockerfile  FEATURE_AUDIT.md  PHASE1_CURRENT_STATE.md  PROJECT_DOCUMENTATION.md  PROJECT_STATUS.md  README.md  VALIDATION.md  config.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.staging.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  full_overhaul.py  pull_request_description.md  pyproject.toml  railway.json  refactor_codebase.py  render.yaml  requirements-flexible.txt  requirements.txt  run_api.py  setup.py  test_api_endpoint.py
.github/: CICD_SETUP.md  DEPLOYMENT_SECRETS.md  DEPLOYMENT_STATUS.md  RAILWAY_DEPLOYMENT.md  RAILWAY_TROUBLESHOOTING.md  RENDER_DEPLOYMENT.md  SECRETS_CHECKLIST.md  SIMPLIFIED_DEPLOYMENT.md  branch-protection.yml
api/: app.py  auth.py
backups/: manifest.json
config/: cloud_credentials.template.json  config.dev.yaml  config.prod.yaml  config.staging.yaml  config.yaml  environments.yml  test_config.yaml
docs/: README.md  api.md  api_usage_examples.md  audit_summary.md  backup_recovery.md  cicd_status.md  data_dictionary.md  deployment.md  environment_config.md  fixes_documentation.md  model.md  notebook_guide.md  system_architecture.md  tutorial_notebook_plan.md  usage.md
notebooks/: .gitignore  heart_disease_prediction_tutorial.ipynb  heart_disease_prediction_tutorial_fixed.html  heart_disease_prediction_tutorial_fixed.ipynb  heart_disease_prediction_tutorial_updated.ipynb  heart_disease_prediction_tutorial_working.html  heart_disease_prediction_tutorial_working.ipynb  heart_disease_prediction_tutorial_working.ipynb.bak  test_notebook.html  test_notebook.ipynb
scripts/: api_load_test.py  backup.sh  backup_system.py  debug_deployment.py  deploy_api.sh  generate_env_file.py  generate_test_data.py  generate_test_models.py  get_data.sh  manual_api_test.py  manual_deploy.sh  process_data.sh  render_local_test.sh  run_api.sh  run_environment.sh  scheduled_backup.py  test_api.sh  test_predict.sh  train_models.sh
src/: utils.py
tests/: conftest.py  test_api.py  test_api_integration.py  test_api_routes.py  test_auth.py  test_backup_recovery.py  test_cache.py  test_data.py  test_docker.py  test_error_handling.py  test_models.py  (+1 more)
(+55 files in other folders)
