[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-api"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "numpy",
  "pandas",
  "scikit-learn",
  "joblib",
  "tensorflow",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["heart_api"]
