[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-mlp"  # Changed to match repository name
version = "0.1.0"
description = "Heart Disease Prediction System with ML Models and REST API"
readme = "README.md"
authors = [
    {name = "A.H. Cooperstone", email = "ahc2188@columbia.edu"}
]
license = {text = "MIT"}
requires-python = ">=3.9"  # 3.11+ recommended for best performance
dependencies = [
    # Core ML
    "numpy>=1.22.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "tensorflow>=2.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "joblib>=1.2.0",
    
    # API
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.0.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.23.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "heart_disease",
    "heart_disease.data",
    "heart_disease.features",
    "heart_disease.models",
    "heart_disease.visualization",
    "heart_api",
    "heart_api.api",
    "heart_api.core",
    "heart_api.services"
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=term-missing --cov-report=xml"
